Overflowing Bug Fixed// Horizontal Scroll bar removed

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+* , ::before , ::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
 body{
     font-family: "montserrat";
     background-color: var(--first);
@@ -7,6 +14,7 @@ body{
   --first:white;
   --title:#000;
   --p-features:#8f8f8f;
+  
 }
 
 .dark-theme{
